# vllm-infinicore

./: .gitignore  AGENTS.md  README.md  pyproject.toml
artifacts/: qwen3_128_32_no_metax_graphsafe_stage3.json  qwen3_128_32_no_metax_stage3.json  qwen3_128_32_smoke.json
artifacts/no-metax-formal-throughput-bs8-in4096-out512-20260604/: manifest.json  summary.json  summary.md
artifacts/no-metax-large-batch-bs8-in1024-out128-20260604/: manifest.json  prompt-in1024.json  summary.json  summary.md
artifacts/no-metax-long-context-bs1-in4096-out128-20260604/: manifest.json  prompt-in4096.json  summary.json  summary.md
artifacts/no-metax-throughput-harness-smoke-bs1-in128-out32-20260604/: manifest.json  prompt-in128.json  summary.json  summary.md
artifacts/no-metax-tp2-graphsafe-bs1-in128-out32-20260604/: summary.md  (+2 more)
configs/: qwen-infinicore.yaml  qwen3_infinicore_graph.yaml  strict-infinicore.yaml
docs/: ARCHITECTURE.md  DEV_LOG.md  INFINILM_VS_VLLM_REASON.md  METAX_FA2_INFINICORE_BUILD.md  QWEN3_OP_SCOPE.md
scripts/: qwen3_128_32_smoke.py  qwen3_three_engine_throughput.py  sync_remote.sh
tests/: test_config.py  test_cpp_bridge.py  test_custom_ops.py  test_infinicore_backend.py  test_platform.py  test_qwen_smoke_harness.py  test_qwen_throughput_harness.py  test_ray.py  test_registration.py  test_remote_smoke.py  test_runtime_patches.py  test_validation.py  test_vllm_embedding_route.py  test_vllm_rms_norm_route.py
vllm_infinicore/: __init__.py  communicator.py  config.py  patches.py  patching.py  platform.py  plugin.py  ray.py  runtime_patches.py  validation.py
(+25 files in other folders)
